# ITKUltrasound

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ITKKWStyleOverwrite.txt  README.rst  appveyor.yml  circle.yml  itk-module-init.cmake  itk-module.cmake  pyproject.toml  setup.py
.binder/: requirements.txt
.circleci/: config.yml
CL/: cl.hpp
CMake/: FindOpenCL.cmake
Code/: CMakeLists.txt  itkAnalyticSignalImageFilter.h  itkAnalyticSignalImageFilter.hxx  itkAnalyticSignalImageFilter.txx  itkFFT1DComplexConjugateToRealImageFilter.h  itkFFT1DComplexConjugateToRealImageFilter.hxx  itkFFT1DComplexConjugateToRealImageFilter.txx  itkFFT1DComplexToComplexImageFilter.h  itkFFT1DComplexToComplexImageFilter.hxx  itkFFT1DComplexToComplexImageFilter.txx  itkFFT1DRealToComplexConjugateImageFilter.h  itkFFT1DRealToComplexConjugateImageFilter.hxx  itkFFT1DRealToComplexConjugateImageFilter.txx  itkFFTW1DComplexConjugateToRealImageFilter.h  itkFFTW1DComplexConjugateToRealImageFilter.txx  itkFFTW1DComplexToComplexImageFilter.h  itkFFTW1DComplexToComplexImageFilter.hxx  itkFFTW1DComplexToComplexImageFilter.txx  itkFFTW1DRealToComplexConjugateImageFilter.h  itkFFTW1DRealToComplexConjugateImageFilter.txx  itkFFTWCommon.h  itkFFTWCommonExtended.h  itkOpenCL1DComplexConjugateToRealImageFilter.h  itkOpenCL1DComplexConjugateToRealImageFilter.hxx  itkOpenCL1DComplexConjugateToRealImageFilter.txx  itkOpenCL1DComplexToComplexImageFilter.h  itkOpenCL1DComplexToComplexImageFilter.hxx  itkOpenCL1DComplexToComplexImageFilter.txx  itkOpenCL1DRealToComplexConjugateImageFilter.h  itkOpenCL1DRealToComplexConjugateImageFilter.hxx  itkOpenCL1DRealToComplexConjugateImageFilter.txx  itkVnl1DRealToComplexConjugateImageFilter.h  itkVnl1DRealToComplexConjugateImageFilter.txx  itkVnlFFT1DComplexConjugateToRealImageFilter.h  itkVnlFFT1DComplexConjugateToRealImageFilter.txx  itkVnlFFT1DComplexToComplexImageFilter.h  itkVnlFFT1DComplexToComplexImageFilter.hxx  itkVnlFFT1DComplexToComplexImageFilter.txx  itkVnlFFT1DRealToComplexConjugateImageFilter.h  itkVnlFFT1DRealToComplexConjugateImageFilter.txx
Submodules/: OpenCL_FFT
Testing/: CMakeLists.txt  itkAnalyticSignalImageFilterTest.cxx  itkFFT1DComplexToComplexImageFilterTest.cxx  itkFFT1DImageFilterTest.cxx  itkFFT1DRealToComplexConjugateImageFilterTest.cxx  itkFFTW1DComplexConjugateToRealImageFilterTest.cxx  itkFFTW1DComplexToComplexImageFilterTest.cxx  itkFFTW1DRealToComplexConjugateImageFilterTest.cxx  itkOpenCL1DComplexConjugateToRealImageFilterTest.cxx  itkOpenCL1DRealToComplexConjugateImageFilterTest-gdb.py  itkOpenCL1DRealToComplexConjugateImageFilterTest.cxx  itkVnlFFT1DComplexConjugateToRealImageFilterTest.cxx  itkVnlFFT1DComplexToComplexImageFilterTest.cxx  itkVnlFFT1DRealToComplexConjugateImageFilterTest.cxx
Testing/Data/Baseline/: itkAnalyticSignalImageFilterImaginary.mhd  itkAnalyticSignalImageFilterImaginary.raw  itkAnalyticSignalImageFilterReal.mhd  itkAnalyticSignalImageFilterReal.raw
Testing/Data/Input/: itkFFT1DRealToComplexConjugateImageFilterTestBaselineImaginary.mhd  itkFFT1DRealToComplexConjugateImageFilterTestBaselineImaginary128.raw  itkFFT1DRealToComplexConjugateImageFilterTestBaselineImaginaryFull.raw  itkFFT1DRealToComplexConjugateImageFilterTestBaselineImaginaryNotFull.raw  itkFFT1DRealToComplexConjugateImageFilterTestBaselineReal.mhd  itkFFT1DRealToComplexConjugateImageFilterTestBaselineReal.raw  itkFFT1DRealToComplexConjugateImageFilterTestBaselineRealFull.mhd
examples/: EyeRoundOverChuck_5.0MHz_20V.mha  MouseLiverB.mha  MouseLiverRF-label.mha  MouseLiverRF.mha  OSRAD.ipynb  PlotPowerSpectra.ipynb  RFPowerSpectraAttenuation.ipynb  RFToBModeGeneration.ipynb  TimeGainCompensation.ipynb  itkBlockMatchingMultiResolutionImageRegistrationMethodTest.py  requirements.txt
include/: .itkBlockMatchingImageRegistrationMethod.h.swp  .itkSplitComponentsImageFilter.hxx.swp  itkAcousticImpulseResponseImageFilter.h  itkAcousticImpulseResponseImageFilter.hxx  itkAnalyticSignalImageFilter.h  itkAnalyticSignalImageFilter.hxx  itkAttenuationImageFilter.h  itkAttenuationImageFilter.hxx  itkBModeImageFilter.h  itkBModeImageFilter.hxx  itkBModeImageFilter.txx  itkBackscatterImageFilter.h  itkBackscatterImageFilter.hxx  itkBlockMatchingBayesianRegularizationDisplacementCalculator.h  itkBlockMatchingBayesianRegularizationDisplacementCalculator.hxx  itkBlockMatchingBayesianRegularizationDisplacementCalculator.txx  itkBlockMatchingBlockAffineTransformMetricImageFilter.h  itkBlockMatchingBlockAffineTransformMetricImageFilter.hxx  itkBlockMatchingBlockAffineTransformMetricImageFilter.txx  itkBlockMatchingCosineInterpolationDisplacementCalculator.h  itkBlockMatchingCosineInterpolationDisplacementCalculator.hxx  itkBlockMatchingCosineInterpolationDisplacementCalculator.txx  itkBlockMatchingDisplacementPipeline.h  itkBlockMatchingDisplacementPipeline.hxx  itkBlockMatchingImageRegistrationMethod.h  itkBlockMatchingImageRegistrationMethod.hxx  itkBlockMatchingImageRegistrationMethod.txx  itkBlockMatchingImageToImageMetricMetricImageFilter.h  itkBlockMatchingImageToImageMetricMetricImageFilter.hxx  itkBlockMatchingImageToImageMetricMetricImageFilter.txx  itkBlockMatchingMaximumPixelDisplacementCalculator.h  itkBlockMatchingMaximumPixelDisplacementCalculator.hxx  itkBlockMatchingMaximumPixelDisplacementCalculator.txx  itkBlockMatchingMetricImageFilter.h  itkBlockMatchingMetricImageFilter.hxx  itkBlockMatchingMetricImageFilter.txx  itkBlockMatchingMetricImageToDisplacementCalculator.h  itkBlockMatchingMetricImageToDisplacementCalculator.hxx  itkBlockMatchingMetricImageToDisplacementCalculator.txx  itkBlockMatchingMultiResolutionBlockRadiusCalculator.h  (+165 more)
notebooks/: TimeGainCompensation.ipynb
src/: CMakeLists.txt  itkCurvilinearFFTImageFilterInitFactory.cxx  itkHDF5UltrasoundImageIO.cxx  itkHDF5UltrasoundImageIOFactory.cxx  itkTextProgressBarCommand.cxx  itkclFFTInitializer.cxx
test/: CMakeLists.txt  azure-pipelines.yml  itkAcousticImpulseResponseImageFilterTest.cxx  itkAnalyticSignalImageFilterTest.cxx  itkAttenuationImageFilterTest.cxx  (+55 more)
(+159 files in other folders)
